; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_BecomeLockGroupLeader.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_BecomeLockGroupLeader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, %struct.TYPE_3__* }

@MyProc = common dso_local global %struct.TYPE_3__* null, align 8
@LW_EXCLUSIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BecomeLockGroupLeader() #0 {
  %1 = alloca i32*, align 8
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 2
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %6 = icmp eq %struct.TYPE_3__* %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  br label %30

8:                                                ; preds = %0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = icmp eq %struct.TYPE_3__* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @Assert(i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %16 = call i32* @LockHashPartitionLockByProc(%struct.TYPE_3__* %15)
  store i32* %16, i32** %1, align 8
  %17 = load i32*, i32** %1, align 8
  %18 = load i32, i32* @LW_EXCLUSIVE, align 4
  %19 = call i32 @LWLockAcquire(i32* %17, i32 %18)
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 2
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %22, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MyProc, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @dlist_push_head(i32* %24, i32* %26)
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @LWLockRelease(i32* %28)
  br label %30

30:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32* @LockHashPartitionLockByProc(%struct.TYPE_3__*) #1

declare dso_local i32 @LWLockAcquire(i32*, i32) #1

declare dso_local i32 @dlist_push_head(i32*, i32*) #1

declare dso_local i32 @LWLockRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
